--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <section id="register">
         <div id="music">
             <div id="logo">
-                <img src="/Images/music Logo.svg" alt="Logo">
+                <img src="./Images/music Logo.svg" alt="Logo">
             </div>
             <div id="music_text">
                 <strong>Music</strong>
@@ -70,7 +70,7 @@
         </div>
 
         <div id="music_image">
-            <img src="/Images/mockup1.png" alt="Image">
+            <img src="./Images/mockup1.png" alt="Image">
         </div>
     </section>
 
