Fixing broken image
beta . use krte folder se bhar aane k liye

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         </div>
 
         <div id="tab_image">
-            <img src="/Images/mockup.jpeg" alt="Tab Image">
+            <img src="./Images/mockup.jpeg" alt="Tab Image">
         </div>
     </section>
 
@@ -112,7 +112,7 @@
 
     <section id="gift_card">
         <div id="gift_card_image">
-            <img src="/Images/cards.png" alt=" Gift Cards">
+            <img src="./Images/cards.png" alt=" Gift Cards">
         </div>
 
         <div id="gift_card_para">
