--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
     <title>Document</title>
 
     <link rel="stylesheet" href="first_page.css">
+    <link rel="stylesheet" media="screen and (max-width: 800px)" href="media1.css">
+    <link rel="stylesheet" media="screen and (max-width: 620px)" href="media2.css">
+    <link rel="stylesheet" media="screen and (max-width: 530px)" href="media3.css">
+    <link rel="stylesheet" media="screen and (max-width: 470px)" href="media4.css">
+    <link rel="stylesheet" media="screen and (max-width: 440px)" href="media5.css">
+    <link rel="stylesheet" media="screen and (max-width: 395px)" href="media6.css">
+    <link rel="stylesheet" media="screen and (max-width: 376px)" href="media7.css">
+    <link rel="stylesheet" media="screen and (max-width: 358px)" href="media8.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Baloo+Bhai+2:wght@500&display=swap" rel="stylesheet">
 
@@ -129,52 +137,56 @@
 
     <section id="footer">
         <div id="container">
-            <div id="box-1">
-                <h4>Shop&Learn</h4>
-                <hr>
-                <ul>
-                    <li> <a href = "#">Music</a></li>
-                    <li> <a href = "#">Movies</a></li>
-                    <li> <a href = "#">Shows</a></li>
-                    <li> <a href = "#">Apps</a></li>
-                    <li> <a href = "#">Gift Cards</a></li>
-                </ul>
+            <div class="binding_box">
+                <div id="box-1">
+                    <h4>Shop&Learn</h4>
+                    <hr>
+                    <ul>
+                        <li> <a href = "#">Music</a></li>
+                        <li> <a href = "#">Movies</a></li>
+                        <li> <a href = "#">Shows</a></li>
+                        <li> <a href = "#">Apps</a></li>
+                        <li> <a href = "#">Gift Cards</a></li>
+                    </ul>
+                </div>
+
+                <div id="box-2">
+                    <h4>Orange Store</h4>
+                    <hr>
+                    <ul>
+                        <li> <a href = "#">Find a Store</a></li>
+                        <li> <a href = "#">Today at myTunes</a></li>
+                        <li> <a href = "#">Tunes camp</a></li>
+                        <li> <a href = "#">Financing</a></li>
+                        <li> <a href = "#">Order Status</a></li>
+                    </ul>
+                </div>
             </div>
 
-            <div id="box-2">
-                <h4>Orange Store</h4>
-                <hr>
-                <ul>
-                    <li> <a href = "#">Find a Store</a></li>
-                    <li> <a href = "#">Today at myTunes</a></li>
-                    <li> <a href = "#">Tunes camp</a></li>
-                    <li> <a href = "#">Financing</a></li>
-                    <li> <a href = "#">Order Status</a></li>
-                </ul>
-            </div>
+            <div class="binding_box">
+                <div id="box-3">
+                    <h4>Eduction & Business</h4>
+                    <hr>
+                    <ul>
+                        <li> <a href = "#">Tunes and Education</a></li>
+                        <li> <a href = "#">Shop for college</a></li>
+                        <li> <a href = "#">Tunes and Business</a></li>
+                        <li> <a href = "#">Shop for Business</a></li>
+                        <li> <a href = "#">Jobs</a></li>
+                    </ul>
+                </div>
 
-            <div id="box-3">
-                <h4>Eduction & Business</h4>
-                <hr>
-                <ul>
-                    <li> <a href = "#">Tunes and Education</a></li>
-                    <li> <a href = "#">Shop for college</a></li>
-                    <li> <a href = "#">Tunes and Business</a></li>
-                    <li> <a href = "#">Shop for Business</a></li>
-                    <li> <a href = "#">Jobs</a></li>
-                </ul>
-            </div>
-
-            <div id="box-4">
-                <h4>About myTunes</h4>
-                <hr>
-                <ul>
-                    <li> <a href = "#">Newsroom</a></li>
-                    <li> <a href = "#">myTunes Leadership</a></li>
-                    <li> <a href = "#">Investors</a></li>
-                    <li> <a href = "#">Events</a></li>
-                    <li> <a href = "#">Contact myTunes</a></li>
-                </ul>
+                <div id="box-4">
+                    <h4>About myTunes</h4>
+                    <hr>
+                    <ul>
+                        <li> <a href = "#">Newsroom</a></li>
+                        <li> <a href = "#">myTunes Leadership</a></li>
+                        <li> <a href = "#">Investors</a></li>
+                        <li> <a href = "#">Events</a></li>
+                        <li> <a href = "#">Contact myTunes</a></li>
+                    </ul>
+                </div>
             </div>
         </div>
     </section>
